postinstall/hc-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcheck
  labels:
    createdby: terraform
    datacenter: cluster # ${var.cluster_name}
