postinstall/hc-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hc-app
  namespace: healthcheck
  labels:
    createdby: terraform
    datacenter: cluster # "${var.cluster_name}"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hc-app
  template:
    metadata:
      labels:
        app: hc-app
        createdby: terraform
        datacenter: cluster # "${var.cluster_name}"
    spec:
      containers:
      - name: hc
        image: emrekenci/k8s-healthcheck:v1
        ports:
        - containerPort: 5000
