postinstall/hc-app/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hc-ingress
  namespace: healthcheck
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/rewrite-target: /healthz
  labels:
    createdby: terraform
    datacenter: cluster # ${var.cluster_name}
spec:
  rules:
  - http:
      paths:
      - path: /healthz
        backend:
          serviceName: hc-service
          servicePort: 5000
